# VOXELCRAI

./: .gitignore  ADD_EXE_TO_REPO.md  ARCHITECTURE.md  BAKED_LIGHTING.md  BAKED_LIGHTING_QUICKSTART.md  BENCHMARK.md  BENCHMARK_QUICKSTART.md  BENCHMARK_RESULTS.md  BENCHMARK_SUMMARY.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  Cargo.toml  FEATURES.md  FIXES_APPLIED.md  GPU_COMPARISON_DETAILED.md  GTX1060_BENCHMARK_RESULTS.md  LIGHTING_ADVANTAGES.md  PERFORMANCE_COMPARISON.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_BUILD.md  RADEON_VII_ARCHITECTURE_ANALYSIS.md  RADEON_VII_BENCHMARK_RESULTS.md  RADEON_VII_CPU_AVX2_RESULTS.md  RADEON_VII_FP16_BENCHMARK_RESULTS.md  RADEON_VII_FRAME_GENERATOR_RESULTS.md  README.md  README_EXE.md  RTX3060_BENCHMARK_RESULTS.md  RTX3060_DETAILED_BENCHMARK_RESULTS.md  RTX3060_METRICS_EXPLANATION.md  RTX_COMPARISON.md  STATUS.md  TEST_STATUS.txt  TRIGGER_BUILD.md  USER_GUIDE.md  VIRTUALIZATION.md  VOXELFORGE.md  VOXELSTRIKE.md  VoxelCraft-v1.0.0-signed.apk  (+10 more)
.cargo/: config.toml
.github/workflows/: build-exe-fallback.yml  build-exe.yml
19v-tauri/: README.md
19v-tauri/src-tauri/: Cargo.toml  tauri.conf.json
19v-tauri/src-tauri/src/: app.rs  duckduckgo.rs  lib.rs  light_pattern.rs  simulation.rs
19v-tauri/src-tauri/src/shaders/: light_pattern.wgsl
PatternLightingUE5/: INSTALLATION.md  PatternLighting.uplugin  QUICKSTART.md  README.md
PatternLightingUE5/Config/: DefaultPatternLighting.ini
PatternLightingUE5/Resources/: Icon128.png.txt
PatternLightingUnity/: CHANGELOG.md  README.md  package.json
PatternLightingUnity/Editor/: PatternLighting.Editor.asmdef
PatternLightingUnity/Runtime/: PatternLighting.Runtime.asmdef
VoxelCraft/: Cargo.toml  Makefile  README.md  VoxelCraft-v1.0.3-aligned.apk  VoxelCraft-v1.0.3-signed.apk  VoxelCraft-v1.0.3-signed.apk.idsig  VoxelCraft-v1.0.4-aligned.apk  VoxelCraft-v1.0.4-signed.apk  VoxelCraft-v1.0.4-signed.apk.idsig  VoxelCraft-v1.0.5-aligned.apk  VoxelCraft-v1.0.5-signed.apk  VoxelCraft-v1.0.5-signed.apk.idsig  VoxelCraft-v1.0.6-aligned.apk  VoxelCraft-v1.0.6-signed.apk  VoxelCraft-v1.0.6-signed.apk.idsig  VoxelCraft-v1.0.7-aligned.apk  VoxelCraft-v1.0.7-signed.apk  VoxelCraft-v1.0.7-signed.apk.idsig  VoxelCraft-v1.0.8-aligned.apk  VoxelCraft-v1.0.8-signed.apk  VoxelCraft-v1.0.8-signed.apk.idsig
VoxelCraft/android/: keystore.jks  settings.gradle
VoxelCraft/android/.cargo/: config.toml
VoxelCraft/android/app/: build.gradle
VoxelCraft/android/app/src/main/: AndroidManifest.xml
VoxelCraft/android/app/src/main/java/com/voxelcraft/: VoxelCraftActivity.java
VoxelCraft/scripts/: build-android.sh  build-desktop.sh
VoxelCraft/src/: lib.rs  main.rs
VoxelCraft/src/assets/shaders/: sky.wgsl  terrain.wgsl  ui.wgsl  water.wgsl
VoxelCraft/src/crafting/: mod.rs
VoxelCraft/src/entities/: mod.rs
VoxelCraft/src/player/: inventory.rs  mod.rs  stats.rs
VoxelCraft/src/rendering/: loading.rs  mod.rs
VoxelCraft/src/save/: mod.rs
VoxelCraft/src/ui/: mod.rs
VoxelCraft/src/world/: biome.rs  block.rs  chunk.rs  generator.rs  mod.rs  structure.rs
VoxelCraiMod/: LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
crimeaai-ecosystem/: README.md  build.bat  build.sh  build_exe.py  main.py  requirements.txt
crimeaai-ecosystem/core/: __init__.py  concept_search.py  kaif_engine.py  light_pattern.py  nucleotide.py  scheduler.py  voxel.py
crimeaai-ecosystem/ui/: __init__.py  main_window.py  theme.py  visualizer.py  widgets.py
crimeaai-ecosystem/utils/: __init__.py  plugins.py  serialization.py
crimeaai_meta_organism/: .gitignore  Cargo.toml  README.md  crimeaai_single_file.py  demo.py  main.py  organism.py  requirements.txt  run.sh  test_organism.py  visualizer.py  voxel_core.py
crimeaai_meta_organism/drop_zone/: sample_compatible.py
crimeaai_meta_organism/src/: lib.rs  main.rs
crimeaai_meta_organism/src/consciousness/: coevolution.rs  core.rs  mod.rs
crimeaai_meta_organism/src/render/: camera.rs  mod.rs  pipeline.rs
crimeaai_meta_organism/src/shaders/: evolution_compute.wgsl  voxel_render.wgsl
crimeaai_meta_organism/src/voxel/: atrophy.rs  clustering.rs  memory.rs  mod.rs  trauma.rs  types.rs
cursor-ai-ecosystem/: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  INFO.txt  INSTALL_RU.md  LICENSE  Makefile  PROJECT_INFO.md  PROJECT_SUMMARY.md  QUICKSTART_RU.md  README.md  README_RU.md  START_HERE.md  config.example.py  main.py  requirements.txt  run.bat  run.sh
cursor-ai-ecosystem/examples/: simple_usage.py
cursor-ai-ecosystem/scripts/: build_exe.py
cursor-ai-ecosystem/src/: __init__.py
scripts/: add-exe-to-repo.sh  build-exe-simple.sh  build-linux.sh  build-mega-exe.bat  build-mega-exe.sh  build-release.sh  build-windows-exe.sh  package.sh
src/: agents.rs  archguard.rs  async_compute.rs  bake_patterns.rs  benchmark.rs  benchmark_gtx1060.rs  benchmark_gtx1060_main.rs  benchmark_main.rs  benchmark_radeon_vii.rs  benchmark_radeon_vii_main.rs  benchmark_rtx3060.rs  benchmark_rtx3060_main.rs  camera.rs  chat.rs  consciousness.rs  cpu_lighting_compute.rs  ecs.rs  engine.rs  evolution.rs  frame_generator.rs  integrations.rs  learning.rs  lib.rs  lighting.rs  lighting_patterns.rs  lighting_patterns_fp16.rs  main.rs  particles.rs  pattern_baker.rs  pbr.rs  performance.rs  renderer.rs  resources.rs  scene.rs  simulate_benchmark.rs  simulate_gtx1060.rs  simulate_radeon_vii.rs  simulate_radeon_vii_cpu.rs  simulate_radeon_vii_fg.rs  simulate_radeon_vii_fp16.rs  (+8 more)
src/consciousness/: core.rs
src/editor/: assets.rs  gameplay.rs  inspector.rs  main.rs  mod.rs  project.rs  scene.rs  tools.rs  ui.rs  viewport.rs
src/game/: camera.rs  enemies.rs  hud.rs  main.rs  map.rs  mod.rs  player.rs  renderer.rs  weapons.rs
src/lighting/: mod.rs  pattern_lighting.rs
src/shaders/: lighting_fp16.wgsl  particles.wgsl  pbr.wgsl  voxel.wgsl
src/voxel/: memory.rs  types.rs
xonotic-lighting-mod/: README.md
xonotic-lighting-mod/cfg/: autoexec.cfg  pattern_lighting.cfg
xonotic-lighting-mod/glsl/: emissive.glsl  pattern_lighting.glsl  postprocess.glsl  ssr_reflection.glsl
(+68 files in other folders)
