[package]
name = "adaptive-entity-engine"
version = "1.0.0"
edition = "2021"
authors = ["Adaptive Entity Engine Team"]
description = "High-performance voxel engine with ECS, Vulkan rendering, and adaptive evolution"
license = "MIT OR Apache-2.0"

[features]
default = ["gui", "all-integrations"]
gui = ["eframe", "egui", "rfd", "chrono", "include_dir", "wgpu", "winit", "bytemuck", "pollster"]
all-integrations = ["reqwest"]

[profile.release]
opt-level = "z"  # Оптимизация размера
lto = "fat"      # Полная LTO для максимальной оптимизации
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[dependencies]
# Graphics & Rendering (optional for GUI)
wgpu = { version = "0.19", optional = true }
winit = { version = "0.28", optional = true }
bytemuck = { version = "1.14", optional = true }
pollster = "0.3"
env_logger = "0.11"

# ECS
bevy_ecs = "0.13"
bevy_utils = "0.13"

# UI (optional for GUI)
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow", "persistence"], optional = true }
egui = { version = "0.24", optional = true }
rfd = { version = "0.12", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
include_dir = { version = "0.7", optional = true }

# HTTP клиент для интеграций (опционально)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }

# Math & Utilities
glam = "0.24"
nalgebra = "0.32"
half = "2.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async & Networking
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Monitoring & Protection
prometheus = "0.13"
parking_lot = "0.12"
dashmap = "5.5"

# HIP/ROCm (optional, for AMD Vega 20 fallback)
# rocm-smi = "0.1" # Uncomment if needed

# Evolution & Genetics
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }

# Compression & Storage
flate2 = "1.0"
bincode = "1.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
# Bare-metal AArch64 support

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "adaptive-entity-engine"
path = "src/main.rs"

[[bin]]
name = "test-components"
path = "src/test_components.rs"
