[package]
name = "adaptive-entity-engine"
version = "1.0.0"
edition = "2021"
authors = ["Adaptive Entity Engine Team"]
description = "High-performance voxel engine with ECS, Vulkan rendering, and adaptive evolution. Includes VoxelStrike - a CS-like FPS game!"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = ["gui"]
gui = ["wgpu", "winit", "pollster", "bytemuck", "eframe", "egui"]

[dependencies]
# Graphics & Rendering
wgpu = { version = "0.19", optional = true }
winit = { version = "0.29", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
env_logger = "0.11"
log = "0.4"

# UI Framework
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow", "wgpu"], optional = true }
egui = { version = "0.27", optional = true }

# ECS
bevy_ecs = "0.13"
bevy_utils = "0.13"

# Math & Utilities
glam = "0.24"
nalgebra = "0.32"
half = "2.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async & Networking
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Monitoring & Protection
prometheus = "0.13"
parking_lot = "0.12"
dashmap = "5.5"

# Evolution & Genetics
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }

# Compression & Storage
flate2 = "1.0"
bincode = "1.3"

# Image processing for textures
image = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
# Bare-metal AArch64 support

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "adaptive-entity-engine"
path = "src/main.rs"

[[bin]]
name = "test-components"
path = "src/test_components.rs"

[[bin]]
name = "voxelstrike"
path = "src/game/main.rs"
required-features = ["gui"]
