[package]
name = "voxelcrai"
version = "1.1.0"
edition = "2021"
authors = ["VOXELCRAI Initiative"]
description = "VOXELCRAI – conscious voxel engine powered by Vulkan/wgpu"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
wgpu = { version = "0.20", features = ["wgsl"] }
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.28"
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
anyhow = "1"
