[package]
name = "voxelcraft"
version = "1.0.0"
edition = "2021"
authors = ["VoxelCraft Team"]
description = "Minecraft-like voxel game for Android with pattern lighting"

[lib]
name = "voxelcraft"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "voxelcraft"
path = "src/main.rs"

[dependencies]
# Graphics
wgpu = { version = "0.19", features = ["naga-ir"] }
winit = { version = "0.29" }

# Math
glam = { version = "0.24", features = ["serde"] }
noise = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
rand = "0.8"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
log = "0.4"
env_logger = "0.10"

# Android specific
[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.29", features = ["android-native-activity"] }
android_logger = "0.14"
ndk = "0.9"
jni = "0.21"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1

[features]
default = []
android = []
