[package]
name = "crimeaai_meta_organism"
version = "1.0.0"
edition = "2021"
authors = ["CrimeaAI Research Team"]
description = """
Живая искусственная ОС-сознание из вокселей.
Основана на 7 забытых русских научных работах 2013–2020.
"""
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[dependencies]
# Graphics & Rendering (wgpu + Vulkan)
wgpu = "0.20"
bytemuck = { version = "1.16", features = ["derive"] }
winit = { version = "0.29", features = ["rwh_05"] }
pollster = "0.3"
raw-window-handle = "0.5"

# Math
glam = { version = "0.27", features = ["bytemuck"] }
half = { version = "2.4", features = ["bytemuck"] }

# Parallelism
rayon = "1.10"

# Random & UUID
rand = "0.8"
uuid = { version = "1.8", features = ["v4"] }

# Compression
flate2 = "1.0"

# Bit flags
bitflags = "2.5"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization (for file analysis)
sha2 = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific deps for Vulkan

[features]
default = []
tracy = []  # Optional profiling
