[package]
name = "nineteenv"
version = "0.1.0"
description = "19V v3.0 autonomous organism shell built with Rust+Tauri"
authors = ["Adaptive Entity Engine Team"]
license = "MIT OR Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.82"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = ["config-json"] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = [
  "wgpu",
  "default_fonts",
] }
egui_plot = "0.27"
futures = "0.3"
glam = "0.29"
log = "0.4"
bytemuck = { version = "1.17", features = ["derive"] }
parking_lot = "0.12"
pollster = "0.3"
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10"
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.13"
tauri = { version = "2.8.3", features = ["wry"] }
tauri-plugin-log = "2"
thiserror = "1.0"
tokio-stream = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
wgpu = { version = "0.20", features = ["vulkan-portability"] }
